# kotonoha-bot

./: .cursorrules  .dockerignore  .env.example  .gitignore  .markdownlint.json  AGENT.md  Dockerfile  Dockerfile.postgres  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml
alembic/: env.py
alembic/versions/: 202601182039_initial_schema.py  202601201940_add_pg_bigm_extension.py  ca650c17adda_initial_schema.py
docs/: README.md  api-specification.md  basic-design.md  command-specification.md  database-design.md  deployment-operations.md  detailed-design.md  event-specification.md  functional-requirements.md  getting-started.md  implementation-considerations.md  implementation-roadmap.md  middleware-selection.md  product-backlog.md  requirements.md  system-architecture.md  test-plan.md  test-specification.md  use-cases.md  user-stories.md  wbs.md
docs/00_planning/: future-features-review.md  project-management.md  roadmap.md
docs/00_planning/phases/: future-features-review.md  phase01.md  phase02.md  phase03.md  phase05.md  phase06.md  phase07.md  phase08.md  phase09.md  phase10-implementation-steps.md  phase10-implementation-testing.md  phase10-implementation.md  phase10-review.md  phase10.md  phase11.md  phase11_review.md
docs/10_requirements/11_business-reqs/: overview.md  persona-requirements.md  user-stories.md
docs/10_requirements/12_system-reqs/: dashboard-options.md  features-list.md  functional-requirements.md
docs/20_architecture/21_system-arch/: basic-design.md  system-architecture.md
docs/20_architecture/22_adrs/: 0001-use-python-3-14.md  0002-litellm-multi-provider-strategy.md  0003-use-sqlite.md  0004-hybrid-session-management.md  0005-four-conversation-triggers.md  0006-migrate-to-aiosqlite.md  0007-migrate-to-postgresql.md  0008-langgraph-consideration.md  0009-langchain-vs-litellm.md  0010-aisuite-vs-litellm.md  0011-remove-litellm-direct-sdk.md  README.md  eavesdrop-judge-model-comparison.md  litellm-necessity-analysis.md  llm-provider-comparison.md  middleware-selection.md
docs/30_design_basic/: api-specification.md  command-specification.md  discord-message-formatting.md  eavesdrop-specification.md  event-specification.md
docs/40_design_detailed/41_logic/: detailed-design.md  knowledge-base-design.md
docs/40_design_detailed/42_db-schema-physical/: postgresql-schema-ddl.md  postgresql-schema-indexes.md  postgresql-schema-overview.md  postgresql-schema-tables.md
docs/50_implementation/51_guides/: code-quality-and-testing.md  considerations.md  conversation-definition.md  conversation-state-llm-judgment.md  development-environment-guide.md  faq.md  intervention-improvements.md  pgadmin-setup-guide.md  postgresql-database-initialization-guide.md  postgresql-implementation-guide.md  postgresql-query-guide.md  prompt-management.md  token-optimization.md
docs/50_implementation/52_procedures/: audit-logging-implementation-plan.md  postgres-custom-image-guide.md  postgresql-embedding-processing.md  postgresql-implementation.md  postgresql-session-archiving.md
docs/60_testing/: postgresql-testing-strategy.md  test-specification.md
docs/90_operations/: deployment-operations.md  troubleshooting.md
docs/XX_temporary/: README.md
docs/architecture/: basic-design.md  database-design.md  detailed-design.md  postgresql-schema-design.md  system-architecture.md
docs/architecture/adr/: 0001-use-python-3-14.md  0002-litellm-multi-provider-strategy.md  0002-select-gemini-api.md  0003-use-sqlite.md  0004-hybrid-session-management.md  0005-four-conversation-triggers.md  0006-migrate-to-aiosqlite.md  0007-migrate-to-postgresql.md  README.md
docs/development/: contributing.md  faq.md  litellm-necessity-analysis.md  llm-provider-comparison.md  prompt-management.md
docs/examples/: ai_provider_usage_example.md  without_ai_provider.md
docs/implementation/: audit-logging-considerations.md  audit-logging-implementation-plan.md  considerations.md  conversation_definition.md  conversation_state_llm_judgment.md  features_list.md  intervention_improvements.md  knowledge-base-design.md  middleware-selection.md  postgresql-implementation.md  roadmap.md  token_optimization.md
docs/operations/: deployment-operations.md  health-check.md  troubleshooting.md
docs/requirements/: conversation-triggers.md  functional-requirements.md  overview.md  persona-requirements.md  project-management.md  use-cases.md  user-stories.md
docs/specifications/: api-specification.md  command-specification.md  discord-message-formatting.md  eavesdrop-specification.md  event-specification.md
docs/testing/: test-plan.md  test-specification.md
prompts/: eavesdrop_conversation_state_prompt.md  eavesdrop_response_prompt.md  eavesdrop_same_conversation_prompt.md  system_prompt.md
scripts/: backup.sh  check_phase09_completion.sh  entrypoint.sh  reset-db.sh  restore.sh  setup.sh
src/kotonoha_bot/: __init__.py  config.py  constants.py  health.py  main.py
tests/: conftest.py  test_basic.py
tests/fixtures/: __init__.py  discord.py  factories.py
tests/integration/: test_ai_provider.py  test_concurrent_processing.py  test_embedding_processing.py  test_hybrid_search.py  test_knowledge_base_storage.py  test_migrations.py  test_session_archiving.py  test_session_management.py  test_vector_search.py
tests/performance/: __init__.py  test_embedding_processing.py  test_load.py  test_session_archiving.py  test_vector_search.py
tests/unit/: test_advanced.py  test_anthropic_provider.py  test_boundary_values.py  test_commands.py  test_config.py  test_conversation_buffer.py  test_database_protocol.py  test_db.py  test_embedding_processor.py  test_errors.py  test_handlers_embed.py  test_handlers_error_integration.py  test_handlers_queue_integration.py  test_health.py  test_llm_judge.py  test_main_edge_cases.py  test_main_shutdown.py  test_message_formatter.py  test_message_router.py  test_message_splitter.py  test_openai_embedding.py  test_postgres_db.py  test_rate_limit.py  test_session.py  test_session_archiver.py  test_thread_handler.py
(+104 files in other folders)
