[project]
name = "kotonoha-bot"
version = "0.9.0"
description = "Discord bot featuring AI-powered conversations with context awareness"
readme = "README.md"
authors = [
    { name = "fluxrozin", email = "fluxrozin@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.1",
    "anthropic>=0.76.0",
    "asyncpg>=0.31.0",
    "discord-py>=2.6.4",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.15.0",
    "orjson>=3.11.5",
    "pgvector>=0.4.2",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.31.1",
    "commitizen>=4.11.6",
    "deptry>=0.24.0",
    "dirty-equals>=0.11",
    "duplifinder>=11.0.1",
    "icecream>=2.1.9",
    "ipdb>=0.13.13",
    "ipython>=9.9.0",
    "memray>=1.19.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "pip-audit>=2.10.0",
    "polyfactory>=3.2.0",
    "pre-commit>=4.5.1",
    "py-spy>=0.4.1",
    "pydeps>=3.0.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.0.1",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.4.0",
    "pytest-watcher>=0.6.3",
    "pytest-xdist>=3.8.0",
    "radon>=6.0.1",
    "rich>=14.2.0",
    "ruff>=0.14.11",
    "sphinx>=9.1.0",
    "taskipy>=1.14.1",
    "ty>=0.0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/kotonoha_bot"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "D",      # pydocstyle (Docstring)
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Google Style を強制

[tool.ruff.lint.isort]
known-first-party = ["kotonoha_bot"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]  # テストファイルは docstring チェックをスキップ
"__init__.py" = ["D104"]  # __init__.py の空の docstring を許可

[tool.ty]
# ty は pyproject.toml が存在する場合、自動的にソースディレクトリを検出します
# 追加の設定はコマンドライン引数で指定可能です

[tool.deptry]
# deptry の設定
# kotonoha_bot は自分自身のパッケージ（first-party）として認識させる
# これにより、自分自身へのインポートが推移的依存関係として誤検出されない
known_first_party = ["kotonoha_bot"]
# sqlalchemy は alembic で使用されているが、alembic の推移的依存関係として含まれる
# しかし、マイグレーションファイルで直接使用しているため、明示的に依存関係に追加済み
# DEP003 の警告は無視（既に依存関係に追加しているため）
per_rule_ignores = { DEP003 = ["sqlalchemy"] }
